--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@
                 <input type="text" placeholder="1/10/2010" id="datetime" />    
               </li>
               <li class="list-group-item bg-dark">
-                <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>  
+                <label for="city">Enter City</label>
+                <input type="text" placeholder="san diego" id="city" />
+              </li>
+              <li class="list-group-item bg-dark">
+                <label for="state">Enter State</label>
+                <input type="text" placeholder="us" id="state" />
+              </li>
+              <li class="list-group-item bg-dark">
+                <label for="country">Enter Country</label>
+                <input type="text" placeholder="san diego" id="country" />
+              </li>
+              <li class="list-group-item bg-dark">
+                <label for="shape">Enter Shape</label>
+                <input type="text" placeholder="sphere" id="shape" />
               </li>
               </ul>
             </form>
